--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,17 @@
 body {
-  margin: 0em;
+  font-size: 14px;
+  margin: 0;
+}
+@media screen and (min-width: 768px) and (orientation: portrait) {
+  body {
+    font-size: 1.5em;
+  }
 }
 
 header {
   background-color: #579C87;
-  height: 10vh;
+  height: fit-content;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,8 +19,24 @@ header {
 header h1 {
   color: #FDCB46;
   font-family: "Montserrat", sans-serif;
-  letter-spacing: -2px;
-  transform: scaleY(0.85);
+  margin: 0.5em;
+  letter-spacing: -0.05em;
+}
+
+footer {
+  background-color: #579C87;
+  height: fit-content;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  bottom: 0;
+}
+footer div {
+  margin: auto 1em;
+  color: #FDCB46;
+  font-family: "Montserrat", sans-serif;
+  margin: 0.5em;
 }
 
 /*# sourceMappingURL=main.css.map */
