--- a/css/input/main.scss
+++ b/css/input/main.scss
@@ -1,44 +1,6 @@
-$color-prime: #579C87;
-$color-text: #FDCB46;
-$color-menu: #353535;
+@import "./directory/utils.scss";
+@import "./directory/base.scss";
+@import "./directory/layout.scss";
+@import "./directory/components.scss";
+@import "./directory/pages.scss";
 
-@mixin text {
-    color: $color-text;
-    font-family: 'Montserrat', sans-serif;
-    margin: 0.5em;
-}
-
-body {
-    font-size: 14px;
-    margin: 0;
-    @media screen and (min-width:768px) and (orientation:portrait) {
-        font-size: 1.5em;
-    }
-}
-
-header {
-    background-color: $color-prime;
-    height: fit-content;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    h1 {
-        @include text;
-        letter-spacing: -0.05em;
-    }
-}
-
-footer {
-    background-color: $color-prime;
-    height: fit-content;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    position: absolute;
-    bottom: 0;
-    div {
-        margin: auto 1em;
-        @include text;
-    }
-}
