--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,12 @@
+html, body {
+  height: 100%;
+}
+
 body {
   font-size: 14px;
   margin: 0;
 }
-@media screen and (min-width: 768px) and (orientation: portrait) {
+@media screen and (min-width: 768px) and (min-height: 600px) {
   body {
     font-size: 1.5em;
   }
@@ -20,7 +24,19 @@ header h1 {
   color: #FDCB46;
   font-family: "Montserrat", sans-serif;
   margin: 0.5em;
+  text-align: center;
   letter-spacing: -0.05em;
+}
+
+section {
+  height: max-content;
+  min-height: 100vh;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 footer {
@@ -29,14 +45,43 @@ footer {
   width: 100%;
   display: flex;
   justify-content: space-between;
-  position: absolute;
+  position: sticky;
   bottom: 0;
 }
 footer div {
-  margin: auto 1em;
+  margin: 0.8rem 0.5rem;
+}
+
+a {
   color: #FDCB46;
   font-family: "Montserrat", sans-serif;
   margin: 0.5em;
+  text-align: center;
+}
+
+article {
+  height: 21rem;
+  width: 15rem;
+  margin: 2rem 1rem;
+  box-shadow: 1px 1px 3px #EFEFEF, -1px 1px 3px #EFEFEF, 1px -1px 3px #EFEFEF, -1px -1px 3px #EFEFEF;
+}
+
+.next {
+  height: 2.5rem;
+  width: 13rem;
+  background-color: #579C87;
+  border-radius: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.next p {
+  color: #FDCB46;
+  font-family: "Montserrat", sans-serif;
+  margin: 0.5em;
+  text-align: center;
+  display: block;
+  font-size: 1.3rem;
 }
 
 /*# sourceMappingURL=main.css.map */
