--- a/css/input/directory/_utils.scss
+++ b/css/input/directory/_utils.scss
@@ -6,6 +6,6 @@ $box-shadow: #EFEFEF;
 @mixin text {
     color: $color-text;
     font-family: 'Montserrat', sans-serif;
-    margin: 0.5em;
+    margin: 0.5rem;
     text-align: center;
 }
