--- a/css/input/directory/_base.scss
+++ b/css/input/directory/_base.scss
@@ -6,7 +6,7 @@ body {
     font-size: 14px;
     margin: 0;
     @media screen and (min-width:768px) and (min-height:600px) {
-        font-size: 1.5em;
+        font-size: 1.5rem;
     }
 }
 
@@ -19,7 +19,7 @@ header {
     align-items: center;
     h1 {
         @include text;
-        letter-spacing: -0.05em;
+        letter-spacing: -0.05rem;
     }
 }
 
