--- a/css/input/directory/_layout.scss
+++ b/css/input/directory/_layout.scss
@@ -8,7 +8,6 @@ article {
 
 .next {
     height: 2.5rem;
-    width: 13rem;
     background-color: $color-prime;
     border-radius: 0.5rem;
     margin: 1rem 100%;
@@ -19,7 +18,27 @@ article {
     @include text;
     display: block;
     font-size: 1.3rem;
+    margin: 0 2rem;
     }
 }
 
 @include resto;
+
+.note-enchantée img {
+    width: 2.5rem;
+}
+.note-enchantée p {
+    font-style: italic;
+}
+
+.chic-française h2 {
+    font-size: 1rem;
+}
+
+.délice-papille p {
+    font-style: italic;
+}
+
+.palette-goût p {
+    font-style: italic;
+}
