--- a/css/input/directory/_utils.scss
+++ b/css/input/directory/_utils.scss
@@ -49,18 +49,22 @@ $resto: (
             display: flex;
             flex-direction: column;
             justify-content: center;
+            align-items: center;
             h2 {
+                font-size: 1.5rem;
                 display: block;
-                background-image: linear-gradient(90deg, map-get($style, color-menu-1), map-get($style, color-menu-2));
-                color: rgba(255,255,255,1);
-                text-shadow: 10px 10px 10px rgba( #000000, 1);
+                background: linear-gradient(90deg, map-get($style, color-menu-1), map-get($style, color-menu-2));
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
                 font-family: map-get($style, font-title), sans-serif;
+                margin: 0;
             }
             p {
                 display: block;
                 color: map-get($style, color-menu-1);
                 font-family: map-get($style, font-menu), sans-serif;
                 font-size: 2.5rem;
+                margin: 0;
             }
         }
     }
