--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,6 @@ article {
 
 .next {
   height: 2.5rem;
-  width: 13rem;
   background-color: #579C87;
   border-radius: 0.5rem;
   margin: 1rem 100%;
@@ -84,6 +83,7 @@ article {
   text-align: center;
   display: block;
   font-size: 1.3rem;
+  margin: 0 2rem;
 }
 
 .note-enchantée {
@@ -92,19 +92,23 @@ article {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 .note-enchantée h2 {
+  font-size: 1.5rem;
   display: block;
-  background-image: linear-gradient(90deg, #3C1218, #3C1218);
-  color: white;
-  text-shadow: 10px 10px 10px black;
+  background: linear-gradient(90deg, #3C1218, #3C1218);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   font-family: "Devonshire", sans-serif;
+  margin: 0;
 }
 .note-enchantée p {
   display: block;
   color: #3C1218;
   font-family: "Itim", sans-serif;
   font-size: 2.5rem;
+  margin: 0;
 }
 
 .chic-française {
@@ -113,19 +117,23 @@ article {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 .chic-française h2 {
+  font-size: 1.5rem;
   display: block;
-  background-image: linear-gradient(90deg, #C77412, #905BFD);
-  color: white;
-  text-shadow: 10px 10px 10px black;
+  background: linear-gradient(90deg, #C77412, #905BFD);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   font-family: "Croissant One", sans-serif;
+  margin: 0;
 }
 .chic-française p {
   display: block;
   color: #C77412;
   font-family: "DM Serif Text", sans-serif;
   font-size: 2.5rem;
+  margin: 0;
 }
 
 .délice-papille {
@@ -134,19 +142,23 @@ article {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 .délice-papille h2 {
+  font-size: 1.5rem;
   display: block;
-  background-image: linear-gradient(90deg, #0632DF, #0B89FB);
-  color: white;
-  text-shadow: 10px 10px 10px black;
+  background: linear-gradient(90deg, #0632DF, #0B89FB);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   font-family: "Dancing Script", sans-serif;
+  margin: 0;
 }
 .délice-papille p {
   display: block;
   color: #0632DF;
   font-family: "Nanum Pen Script", sans-serif;
   font-size: 2.5rem;
+  margin: 0;
 }
 
 .palette-goût {
@@ -155,19 +167,43 @@ article {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 .palette-goût h2 {
+  font-size: 1.5rem;
   display: block;
-  background-image: linear-gradient(90deg, #3D9339, #BFFF7E);
-  color: white;
-  text-shadow: 10px 10px 10px black;
+  background: linear-gradient(90deg, #3D9339, #BFFF7E);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   font-family: "Kaushan Script", sans-serif;
+  margin: 0;
 }
 .palette-goût p {
   display: block;
   color: #3D9339;
   font-family: "Nanum Pen Script", sans-serif;
   font-size: 2.5rem;
+  margin: 0;
+}
+
+.note-enchantée img {
+  width: 2.5rem;
+}
+
+.note-enchantée p {
+  font-style: italic;
+}
+
+.chic-française h2 {
+  font-size: 1rem;
+}
+
+.délice-papille p {
+  font-style: italic;
+}
+
+.palette-goût p {
+  font-style: italic;
 }
 
 /*# sourceMappingURL=main.css.map */
