--- a/css/input/directory/_utils.scss
+++ b/css/input/directory/_utils.scss
@@ -43,7 +43,7 @@ $resto: (
 
 @mixin resto {
     @each $name, $style in $resto {
-        .#{$name} {
+        ##{$name} {
             background: map-get($style, color-bg);
             text-align: center;
             display: flex;
