--- a/css/main.css
+++ b/css/main.css
@@ -1,223 +1,1 @@
-@charset "UTF-8";
-html, body {
-  height: 100%;
-}
-
-body {
-  font-family: "Montserrat", sans-serif;
-  font-size: 14px;
-  margin: 0;
-}
-@media screen and (min-width: 768px) and (min-height: 600px) {
-  body {
-    font-size: 1.5rem;
-  }
-}
-
-header {
-  background-color: #579C87;
-  height: fit-content;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-header h1 {
-  color: #FDCB46;
-  font-family: "Montserrat", sans-serif;
-  margin: 0.5rem;
-  text-align: center;
-  letter-spacing: -0.05rem;
-}
-
-section {
-  height: max-content;
-  min-height: 100vh;
-  padding: 1rem;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-footer {
-  background-color: #579C87;
-  height: fit-content;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  position: sticky;
-  bottom: 0;
-}
-footer div {
-  margin: 0.8rem 0.5rem;
-}
-
-a {
-  color: #FDCB46;
-  font-family: "Montserrat", sans-serif;
-  margin: 0.5rem;
-  text-align: center;
-  text-decoration: none;
-}
-
-article {
-  height: 56vh;
-  width: 40vh;
-  margin: 1rem;
-  box-shadow: 1px 1px 5px #EFEFEF, -1px 1px 5px #EFEFEF, 1px -1px 5px #EFEFEF, -1px -1px 5px #EFEFEF;
-}
-
-#next {
-  height: 2.5rem;
-  background-color: #579C87;
-  border-radius: 0.5rem;
-  margin: 1rem 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#next p {
-  color: #FDCB46;
-  font-family: "Montserrat", sans-serif;
-  margin: 0.5rem;
-  text-align: center;
-  display: block;
-  font-size: 1.3rem;
-  margin: 0 2rem;
-}
-
-#note-enchantée {
-  background: #FCDFDB;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-#note-enchantée h2 {
-  font-size: 1.5rem;
-  display: block;
-  background: linear-gradient(90deg, #3C1218, #3C1218);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-family: "Devonshire", sans-serif;
-  margin: 0;
-}
-#note-enchantée p {
-  display: block;
-  color: #3C1218;
-  font-family: "Itim", sans-serif;
-  font-size: 2.5rem;
-  margin: 0;
-}
-
-#chic-française {
-  background: #FFF5FE;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-#chic-française h2 {
-  font-size: 1.5rem;
-  display: block;
-  background: linear-gradient(90deg, #C77412, #905BFD);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-family: "Croissant One", sans-serif;
-  margin: 0;
-}
-#chic-française p {
-  display: block;
-  color: #C77412;
-  font-family: "DM Serif Text", sans-serif;
-  font-size: 2.5rem;
-  margin: 0;
-}
-
-#délice-papille {
-  background: #F9F9F9;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-#délice-papille h2 {
-  font-size: 1.5rem;
-  display: block;
-  background: linear-gradient(90deg, #0632DF, #0B89FB);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-family: "Dancing Script", sans-serif;
-  margin: 0;
-}
-#délice-papille p {
-  display: block;
-  color: #0632DF;
-  font-family: "Nanum Pen Script", sans-serif;
-  font-size: 2.5rem;
-  margin: 0;
-}
-
-#palette-goût {
-  background: #FDFFFD;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-#palette-goût h2 {
-  font-size: 1.5rem;
-  display: block;
-  background: linear-gradient(90deg, #3D9339, #BFFF7E);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-family: "Kaushan Script", sans-serif;
-  margin: 0;
-}
-#palette-goût p {
-  display: block;
-  color: #3D9339;
-  font-family: "Nanum Pen Script", sans-serif;
-  font-size: 2.5rem;
-  margin: 0;
-}
-
-.pages {
-  flex-direction: column;
-  justify-content: start;
-}
-.pages > h2 {
-  margin-bottom: 0;
-}
-.pages article {
-  width: 80vw;
-  min-height: 75vh;
-}
-
-#note-enchantée img {
-  width: 2.5rem;
-}
-
-#note-enchantée p {
-  font-style: italic;
-}
-
-#chic-française h2 {
-  font-size: 1rem;
-}
-
-#délice-papille p {
-  font-style: italic;
-}
-
-#palette-goût p {
-  font-style: italic;
-}
-
-/*# sourceMappingURL=main.css.map */
+html,body{height:100%}body{font-family:"Montserrat",sans-serif;font-size:14px;margin:0}@media screen and (min-width: 768px)and (min-height: 600px){body{font-size:1.5rem}}header{background-color:#579c87;height:fit-content;width:100%;display:flex;justify-content:center;align-items:center}header h1{color:#fdcb46;font-family:"Montserrat",sans-serif;margin:.5rem;text-align:center;letter-spacing:-0.05rem}section{height:max-content;min-height:100vh;padding:1rem;display:flex;justify-content:center;flex-wrap:wrap;justify-content:space-evenly;align-items:center}footer{background-color:#579c87;height:fit-content;width:100%;display:flex;justify-content:space-between;position:sticky;bottom:0}footer div{margin:.8rem .5rem}a{color:#fdcb46;font-family:"Montserrat",sans-serif;margin:.5rem;text-align:center;text-decoration:none}article{height:56vh;width:40vh;margin:1rem;box-shadow:1px 1px 5px #ededed,-1px 1px 5px #ededed,1px -1px 5px #ededed,-1px -1px 5px #ededed}.next{height:2.5rem;background-color:#579c87;border-radius:.5rem;margin:1rem 100%;display:flex;justify-content:center;align-items:center}.next p{color:#fdcb46;font-family:"Montserrat",sans-serif;margin:.5rem;text-align:center;display:block;font-size:1.3rem;margin:0 2rem}.note-enchantee{background:#fcdfdb;text-align:center;display:flex;flex-direction:column;justify-content:center;align-items:center}.note-enchantee h2{font-size:1.5rem;display:block;background:linear-gradient(90deg, #3C1218, #3C1218);-webkit-background-clip:text;-webkit-text-fill-color:transparent;font-family:"Devonshire",sans-serif;margin:0;padding:.5rem}.note-enchantee p{display:block;color:#3c1218;font-family:"Itim",sans-serif;font-size:2.5rem;margin:0}.chic-francaise{background:#fff5fe;text-align:center;display:flex;flex-direction:column;justify-content:center;align-items:center}.chic-francaise h2{font-size:1.5rem;display:block;background:linear-gradient(90deg, #C67412, #6E4CCC);-webkit-background-clip:text;-webkit-text-fill-color:transparent;font-family:"Croissant One",sans-serif;margin:0;padding:.5rem}.chic-francaise p{display:block;color:#c67412;font-family:"DM Serif Text",sans-serif;font-size:2.5rem;margin:0}.delice-papilles{background:#edefef;text-align:center;display:flex;flex-direction:column;justify-content:center;align-items:center}.delice-papilles h2{font-size:1.5rem;display:block;background:linear-gradient(90deg, #0228DD, #229DF9);-webkit-background-clip:text;-webkit-text-fill-color:transparent;font-family:"Dancing Script",sans-serif;margin:0;padding:.5rem}.delice-papilles p{display:block;color:#0228dd;font-family:"Nanum Pen Script",sans-serif;font-size:2.5rem;margin:0}.palette-gout{background:#fdfffd;text-align:center;display:flex;flex-direction:column;justify-content:center;align-items:center}.palette-gout h2{font-size:1.5rem;display:block;background:linear-gradient(90deg, #3D9339, #BFFF7E);-webkit-background-clip:text;-webkit-text-fill-color:transparent;font-family:"Kaushan Script",sans-serif;margin:0;padding:.5rem}.palette-gout p{display:block;color:#3d9339;font-family:"Nanum Pen Script",sans-serif;font-size:2.5rem;margin:0}.note-enchantee img{width:2.5rem}.note-enchantee p{font-style:italic}.chic-francaise h2{font-size:1rem}.delice-papilles p{font-style:italic}.palette-gout p{font-style:italic}.pages{font-family:"Kalam",sans-serif;flex-direction:column;justify-content:start}.pages>h2{font-family:"Montserra",sans-serif;margin-bottom:1rem}.pages article{width:80vw;min-height:75vh;height:fit-content;margin:auto;padding:3rem 2%}.pages article h2{font-size:3em}.pages article table{padding-top:2rem}.pages article table td{font-size:1.3em;padding:.7rem;text-align:left;vertical-align:top;width:100%}.pages article table td:nth-child(1){padding-left:3rem}.pages article table td:nth-child(1)[colspan]{padding-left:1rem;font-weight:bold;font-size:1.5em}.pages article table td:nth-child(2){font-size:1.5em;padding-right:3rem}.pages article .table--title{text-align:center;padding:1rem 0;padding-top:2rem;width:100%;display:flex;justify-content:space-between;align-items:center}.pages article .table--title>img{height:35%;width:35%}@media screen and (max-width: 500px){.pages article{width:90vw;padding:2rem 2%}.pages article table{padding:0}.pages article table td{padding:.5rem}.pages article table td:nth-child(1){padding-left:1rem}.pages article table td:nth-child(1)[colspan]{padding:0}.pages article table td:nth-child(2){padding-right:1rem}}.pages .note-enchantee>img{width:5rem}.pages .note-enchantee h2{font-weight:normal;font-family:"Devonshire",sans-serif}.pages .note-enchantee table tr td{padding:1rem}.pages .note-enchantee .article--footer{display:flex;justify-content:flex-start;font-size:.6em;margin-top:1rem}.pages .note-enchantee .article--footer img{display:inline;vertical-align:middle}.pages .chic-francaise h2{font-size:2em}.pages .chic-francaise td{font-family:"DM Serif Text",sans-serif}.pages .chic-francaise .table--title{font-weight:normal}.pages .chic-francaise--table__entree{color:#c67412}.pages .chic-francaise--table__plat{color:#a56799}.pages .chic-francaise--table__dessert{color:#6e4ccc}/*# sourceMappingURL=main.css.map */
