--- a/css/input/directory/_base.scss
+++ b/css/input/directory/_base.scss
@@ -7,7 +7,7 @@ body {
     font-size: 14px;
     margin: 0;
     @media screen and (min-width:768px) and (min-height:600px) {
-        font-size: 1.5rem;
+        font-size: 21px;
     }
 }
 
