--- a/css/input/directory/_utils.scss
+++ b/css/input/directory/_utils.scss
@@ -52,21 +52,36 @@ $resto: (
             justify-content: center;
             align-items: center;
             h2 {
-                font-size: 1.5rem;
+                font-size: 1.5em;
                 display: block;
                 background: linear-gradient(90deg, map-get($style, color-menu-1), map-get($style, color-menu-2));
                 -webkit-background-clip: text;
                 -webkit-text-fill-color: transparent;
                 font-family: map-get($style, font-title), sans-serif;
                 margin: 0;
-                padding: 0.5rem;
+                padding: 0.5em;
             }
             p {
                 display: block;
                 color: map-get($style, color-menu-1);
                 font-family: map-get($style, font-menu), sans-serif;
-                font-size: 2.5rem;
+                font-size: 2em;
                 margin: 0;
+            }
+            @media (max-width: 375px) {
+                font-size: 0.4rem;
+            }
+            @media (max-width: 480px) {
+                font-size: 0.7rem;
+            }
+            @media (max-width: 768px) and (min-height: 320px) {
+                font-size: 1rem;
+            }
+            @media (max-width: 1024px) and (min-height: 768px) {
+                font-size: 2rem;
+            }
+            @media (min-width: 1025px) and (min-height: 1024px) {
+                font-size: 2.5rem;
             }
         }
     }
