--- a/css/input/directory/_utils.scss
+++ b/css/input/directory/_utils.scss
@@ -68,20 +68,20 @@ $resto: (
                 font-size: 2em;
                 margin: 0;
             }
-            @media (max-width: 375px) {
+            @media (max-width: 380px) {
                 font-size: 0.4rem;
             }
             @media (max-width: 480px) {
                 font-size: 0.7rem;
             }
-            @media (max-width: 768px) and (min-height: 320px) {
+            @media (max-width: 768px) and (min-height: 320px) and (min-width: 481px) {
                 font-size: 1rem;
             }
-            @media (max-width: 1024px) and (min-height: 768px) {
-                font-size: 2rem;
+            @media (max-width: 1024px) and (min-height: 768px) and (min-width: 769px) {
+                font-size: 1.5rem;
             }
             @media (min-width: 1025px) and (min-height: 1024px) {
-                font-size: 2.5rem;
+                font-size: 2rem;
             }
         }
     }
