--- a/css/input/directory/_base.scss
+++ b/css/input/directory/_base.scss
@@ -45,6 +45,9 @@ footer {
     bottom: 0;
     div {
         margin: 0.8rem 0.5rem;
+        &:hover {
+            animation: footer 100ms 2 reverse;
+        }
     }
 }
 
