--- a/css/input/directory/_layout.scss
+++ b/css/input/directory/_layout.scss
@@ -16,14 +16,21 @@ article {
     background-color: $color-prime;
     border-radius: 0.5rem;
     margin: 1rem 100%;
+    padding: 0 2rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    p {
+    div {
     @include text;
     display: block;
     font-size: 1.3em;
-    margin: 0 2rem;
+    margin: 0.5rem;
+    }
+    @for $pnt from 1 through 3 {
+        .pnt#{$pnt} {
+            animation: next 3s ease-in-out 150ms*$pnt infinite;
+            margin: 0.3rem;
+        }
     }
 }
 
@@ -77,7 +84,9 @@ article {
             font-size: 2.5em;
         }
         table {
-            padding-top: 2rem;
+            padding: 1.5rem;
+            padding-bottom: 0.5rem;
+            width: 100%;
             td {
                 font-size: 1.2em;
                 padding: 0.7rem;
@@ -85,12 +94,8 @@ article {
                 vertical-align: top;
                 width: max-content;
             }
-            td:nth-child(1) {
-                padding-left: 3rem;
-            }
             td:nth-child(2) {
                 font-size: 1.5em;
-                padding-right: 3rem;
             }
         }
         .table--title {
@@ -110,27 +115,34 @@ article {
                 }
             }
         }
-        @media screen and (max-width:500px) {
+        @media (max-width:500px) {
             width: 90vw;
             padding: 2rem 2%;
             table {
                 padding: 0;
-                td {
-                    padding: 0.5rem;
-                }
-                td:nth-child(1) {
-                    padding-left: 1rem;
-                }
-                td:nth-child(2) {
-                    padding-right: 1rem;
-                }
-            }
-            .table--title {
-                td {
-                    padding: 0;
-                }
             }
         }
+    }
+}
+
+.entree, .plat, .dessert {
+    img + div {
+        position: relative;
+        &::after{
+            content: "";
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            border-bottom: solid 2px black;
+            transform-origin: 0;
+            transform: scaleX(0);
+            transition: transform 500ms;
+        }
+    }
+    &:hover img + div::after {
+        transform: scaleX(1);
     }
 }
 
@@ -174,15 +186,22 @@ article {
             font-weight: normal;
             padding-bottom: 1em;
     }
-    &--table {
-        &__entree{
-            color: #C67412;
+    .entree{
+        color: #C67412;
+        img + div::after {
+            border-color: #C67412;
         }
-        &__plat{
-            color: #A56799;
+    }
+    .plat{
+        color: #A56799;
+        img + div::after {
+            border-color: #A56799;
         }
-        &__dessert{
-            color: #6E4CCC;
+    }
+    .dessert{
+        color: #6E4CCC;
+        img + div::after {
+            border-color: #6E4CCC;
         }
     }
 }
