--- a/css/input/directory/_utils.scss
+++ b/css/input/directory/_utils.scss
@@ -106,11 +106,17 @@ $resto: (
 }
 
 @keyframes next {
-    0%, 25% {
+    0%, 40%, 60%, 80% {
         transform: translateY(0);
     }
-    12.5% {
+    20% {
         transform: translateY(-50%);
+    }
+    50%, 70%, 90% {
+        transform: translateY(-10%);
+    }
+    90% {
+        transform: scale();
     }
 }
 
